--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Base requirements
-transformers[tf,torch,sentencepiece,vision,optuna,sklearn,onnxruntime]==4.16.2
-datasets[audio]==1.16.1
+# Install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/121 in advance
+transformers[tf,sentencepiece,vision,optuna,sklearn,onnxruntime]==4.16.2
+datasets[audio]==2.0.0
 matplotlib
 ipywidgets
 # Chapter 2 - Classification
